force-app/main/default/objects/FEC_Contact_List__c/FEC_Contact_List__c.object-meta.xml
<CustomObject>
    <description>Thông tin Contact List của khách hàng lấy từ API</description>
    <label>Contact List</label>
    <nameField>
        <displayFormat>CLN - {0}</displayFormat>
        <label>Contact List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact List</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>