force-app/main/default/objects/FEC_Contact_List__c/fields/FEC_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Contact List</relationshipLabel>
    <relationshipName>Contact_List</relationshipName>
    <type>Lookup</type>
</CustomField>