force-app/main/default/objects/FEC_Contact_List__c/fields/FEC_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Channel__c</fullName>
    <description>Kênh thông tin liên lạc</description>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>