force-app/main/default/objects/FEC_Contact_List__c/fields/FEC_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Contact_ID__c</fullName>
    <description>Lưu thông tin Contact ID hỗ trợ cho các quy trình cập nhật thông tin khách hàng</description>
    <label>Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>