force-app/main/default/objects/FEC_Contact_List__c/fields/FEC_Contact_String__c.field-meta.xml
<CustomField>
    <fullName>FEC_Contact_String__c</fullName>
    <description>Giá trị của từng loại thông tin liên lạc</description>
    <label>Contact String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>