force-app/main/default/objects/FEC_Contact_List__c/fields/FEC_Customer_History__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_History__c</fullName>
    <label>Customer History</label>
    <referenceTo>FEC_Customer_History__c</referenceTo>
    <relationshipLabel>Contact List</relationshipLabel>
    <relationshipName>Contact_List</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>