force-app/main/default/objects/FEC_Contact_List__c/fields/FEC_Temporary_Email__c.field-meta.xml
<CustomField>
    <fullName>FEC_Temporary_Email__c</fullName>
    <description>Email tạm thời được tạo bởi user. Dữ liệu chỉ được lưu tại case, không ảnh hưởng tới C360</description>
    <label>Temporary Email</label>
    <type>Email</type>
</CustomField>